FIX: Overflow issue in board title at board header

--- a/frontend/src/assets/styles/cmps/_board-header.scss
+++ b/frontend/src/assets/styles/cmps/_board-header.scss
@@ -59,8 +59,7 @@
           overflow: hidden;
 
           @include for-narrow-layout {
-            width: max-content;
-            overflow: auto;
+            max-width: max-content;
           }
         }
 
